Cleaned up playbooks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,7 +8,7 @@ command_warnings = false
 gathering = smart
 #callback_whitelist = profile_tasks
 forks = 10
-remote_tmp     = ~/.ansible/tmp
+remote_tmp = /tmp
 force_handlers = True
 timeout = 30
 [ssh_connection]
