--- a/playbooks/system2.yml
+++ b/playbooks/system2.yml
@@ -17,8 +17,8 @@
       force: yes
   - name: Configuring network
     command: nmcli con mod "System enp0s8" ipv4.addresses "192.168.55.22/24 192.168.55.1" ipv4.dns 192.168.55.20 ipv4.dns-search test.example.com ipv4.method manual
-#  - name: Reloading Network
-#    command: nmcli con up "System enp0s8"  
+  - name: Reloading Network
+    service: name=NetworkManager state=restarted 
   - name: Fixing Resolv File
     command: echo 'nameserver 192.168.55.20' > /etc/resolv.conf
   - name: Authconfig Enabled. Configuring IPA Client...
@@ -80,6 +80,6 @@
          # Usernames = dave, lisa
          # Passwords = password
          "
-  - name: Rebooting System 2
+  - name: Rebooted System 2
     reboot:
 ...
