Fixed RHEL8 install script

--- a/playbooks/system2.yml
+++ b/playbooks/system2.yml
@@ -79,6 +79,6 @@
          # Usernames = dave, lisa
          # Passwords = password
          "
-  - name: Disabling Services and Rebooting
+  - name: Adjusting Services and Rebooting
     selinux:
-      state: disabled
+      state: permissive
