--- a/playbooks/system2.yml
+++ b/playbooks/system2.yml
@@ -7,6 +7,11 @@
   tasks:
   - name: Setting Hostname
     hostname: name=system2.test.example.com
+  - name: Changing User Password
+    shell: echo vagrant | sudo passwd vagrant --stdin
+    become: no
+  - name: Changing Root Password
+    shell: echo password | sudo passwd root --stdin
   - name: Building host file
     copy:
       dest: /etc/hosts
@@ -82,3 +87,4 @@
   - name: Adjusting Services and Rebooting
     selinux:
       state: permissive
+      policy: targeted
